--- a/class/10Task/index.html
+++ b/class/10Task/index.html
@@ -5,6 +5,6 @@
     <title>JS</title>
 </head>
 <body>
-    <script src="./script/main.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
