--- a/7.lesson.HTMLEvents/homeWork/index.html
+++ b/7.lesson.HTMLEvents/homeWork/index.html
@@ -5,6 +5,6 @@
     <title>HTML Events</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
